_sass/show.scss
.show-wrapper {
  display: grid;
  margin-top: 4rem;
  grid-template-columns: 50% 50%;
  align-items: center;
  justify-content: grid-column-start;
  width: 100%;
}

.expectations {
  text-align: right;
  padding-right: 0.5em;
  vertical-align: baseline;
}
.statement {
  vertical-align: bottom;
}
.offer {
  padding-left: 0.5em;
}

td {
  vertical-align: baseline;
  // min-width: 540px;
}
tr {
  padding: 0;
  margin: 0;
}
td > p {
  font-size: 20px;
  font-weight: 400;
  margin: 0.4rem 0;
}
img.show {
  place-self: center;
}
//Footer-Show Navigation
.show-footer-wrap {
  display: block;
}
.show-footer {
  position: absolute;
  width: 100%;
  bottom: 3em;
  margin-top: 1em;
  border-top: solid 3px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.show-navigation {
  margin-top: 1em;
  display: grid;
  width: 80%;
  grid-template-columns: repeat(4, 1fr);
  align-items: center;
  justify-content: center;
}
.button-show {
  margin: 0 5em;
  padding: 1em 0;
  background: $yellow;
  color: $blue;
  font-weight: 900;
  text-align: center;
}
.active-button-show {
  background: $green;
  color: $yellow;
  text-decoration: underline;
  font-weight: 900;
  text-align: center;
  margin: 0 5em;
  padding: 1em 0;
}

